--- a/assets/ui/main.glade
+++ b/assets/ui/main.glade
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!-- Generated with glade 3.20.1 -->
+<!-- Generated with glade 3.22.1 -->
 <interface>
   <requires lib="gtk+" version="3.20"/>
   <object class="GtkImage" id="image1">
@@ -134,6 +134,7 @@
       </object>
       <packing>
         <property name="submenu">main</property>
+        <property name="position">1</property>
       </packing>
     </child>
   </object>
@@ -268,6 +269,9 @@
     <property name="default_width">1200</property>
     <property name="default_height">860</property>
     <property name="icon">../images/icon.png</property>
+    <child type="titlebar">
+      <placeholder/>
+    </child>
     <child>
       <object class="GtkPaned" id="main-paned">
         <property name="visible">True</property>
@@ -289,13 +293,16 @@
                 <property name="margin_bottom">10</property>
                 <child>
                   <object class="GtkNotebook" id="controller-notebook">
+                    <property name="height_request">200</property>
                     <property name="visible">True</property>
                     <property name="can_focus">True</property>
                     <property name="margin_right">10</property>
+                    <property name="vexpand">True</property>
                     <child>
                       <object class="GtkBox" id="host-box">
                         <property name="visible">True</property>
                         <property name="can_focus">False</property>
+                        <property name="vexpand">True</property>
                         <property name="orientation">vertical</property>
                         <child>
                           <placeholder/>
@@ -399,9 +406,6 @@
           <placeholder/>
         </child>
       </object>
-    </child>
-    <child type="titlebar">
-      <placeholder/>
     </child>
   </object>
 </interface>
