--- a/assets/ui/main.glade
+++ b/assets/ui/main.glade
@@ -281,13 +281,13 @@
             <property name="can_focus">False</property>
             <property name="halign">center</property>
             <property name="valign">start</property>
-            <property name="margin_top">80</property>
             <child>
               <object class="GtkImage">
                 <property name="visible">True</property>
                 <property name="can_focus">False</property>
                 <property name="halign">center</property>
                 <property name="valign">center</property>
+                <property name="margin_top">80</property>
                 <property name="hexpand">False</property>
                 <property name="vexpand">False</property>
                 <property name="pixbuf">../images/wall.png</property>
@@ -297,12 +297,14 @@
           </object>
         </child>
       </object>
+      <packing>
+        <property name="tab_expand">True</property>
+      </packing>
     </child>
     <child type="tab">
       <object class="GtkLabel">
         <property name="visible">True</property>
         <property name="can_focus">False</property>
-        <property name="label" translatable="yes">Welcome</property>
       </object>
       <packing>
         <property name="tab_fill">False</property>
@@ -334,6 +336,7 @@
       <object class="GtkPaned" id="main-paned">
         <property name="visible">True</property>
         <property name="can_focus">True</property>
+        <property name="vexpand">True</property>
         <property name="orientation">vertical</property>
         <property name="wide_handle">True</property>
         <child>
@@ -349,6 +352,7 @@
                 <property name="margin_right">10</property>
                 <property name="margin_top">10</property>
                 <property name="margin_bottom">10</property>
+                <property name="vexpand">True</property>
                 <child>
                   <object class="GtkNotebook" id="controller-notebook">
                     <property name="height_request">200</property>
@@ -366,6 +370,9 @@
                           <placeholder/>
                         </child>
                       </object>
+                      <packing>
+                        <property name="tab_expand">True</property>
+                      </packing>
                     </child>
                     <child type="tab">
                       <object class="GtkLabel">
@@ -389,6 +396,7 @@
                       </object>
                       <packing>
                         <property name="position">1</property>
+                        <property name="tab_expand">True</property>
                       </packing>
                     </child>
                     <child type="tab">
@@ -456,7 +464,7 @@
             </child>
           </object>
           <packing>
-            <property name="resize">False</property>
+            <property name="resize">True</property>
             <property name="shrink">True</property>
           </packing>
         </child>
