--- a/assets/ui/servicesview.glade
+++ b/assets/ui/servicesview.glade
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!-- Generated with glade 3.20.0 -->
+<!-- Generated with glade 3.22.1 -->
 <interface>
   <requires lib="gtk+" version="3.20"/>
   <object class="GtkNotebook" id="notebook1">
@@ -9,19 +9,14 @@
     <property name="vexpand">True</property>
     <property name="scrollable">True</property>
     <child>
-      <object class="GtkScrolledWindow">
+      <object class="GtkBox" id="portlistframe">
         <property name="visible">True</property>
-        <property name="can_focus">True</property>
-        <property name="shadow_type">in</property>
-        <property name="max_content_height">100</property>
+        <property name="can_focus">False</property>
+        <property name="hexpand">True</property>
+        <property name="vexpand">True</property>
+        <property name="orientation">vertical</property>
         <child>
-          <object class="GtkViewport" id="portlistframe">
-            <property name="visible">True</property>
-            <property name="can_focus">True</property>
-            <child>
-              <placeholder/>
-            </child>
-          </object>
+          <placeholder/>
         </child>
       </object>
     </child>
