--- a/assets/ui/logger.glade
+++ b/assets/ui/logger.glade
@@ -242,7 +242,7 @@
     <property name="margin_bottom">1</property>
     <property name="scrollable">True</property>
     <child>
-      <object class="GtkScrolledWindow" id="scrolled">
+      <object class="GtkScrolledWindow" id="log-box">
         <property name="visible">True</property>
         <property name="can_focus">True</property>
         <property name="margin_left">10</property>
@@ -251,13 +251,7 @@
         <property name="margin_bottom">10</property>
         <property name="shadow_type">in</property>
         <child>
-          <object class="GtkViewport" id="log-box">
-            <property name="visible">True</property>
-            <property name="can_focus">False</property>
-            <child>
-              <placeholder/>
-            </child>
-          </object>
+          <placeholder/>
         </child>
       </object>
     </child>
