Adding homogeneous property to `portlistframe`
Adding homogeneous property to GtkBox `portlistframe`.

--- a/assets/ui/servicesview.glade
+++ b/assets/ui/servicesview.glade
@@ -15,6 +15,7 @@
         <property name="hexpand">True</property>
         <property name="vexpand">True</property>
         <property name="orientation">vertical</property>
+        <property name="homogeneous">True</property>
         <child>
           <placeholder/>
         </child>
