--- a/assets/ui/main.glade
+++ b/assets/ui/main.glade
@@ -15,6 +15,7 @@
   <object class="GtkAboutDialog" id="about-window">
     <property name="can_focus">False</property>
     <property name="type_hint">dialog</property>
+    <property name="deletable">False</property>
     <property name="program_name">badKarma</property>
     <property name="version">current</property>
     <property name="copyright" translatable="yes">(c) 2018-2019 xfiltrated.com</property>
